# healpix-pgrx

./: Cargo.toml  README.md  healpix_pgrx_test.control  mogipix.control
healpix_pgrx_test/: Cargo.toml
healpix_pgrx_test/src/: bmoc.rs  lib.rs
install/: Makefile  README.md  script_makefile.sh
install/cds_healpix_pgrx/share/postgresql/17/extension/: healpix_pgrx--0.0.1.sql  healpix_pgrx.control
install/cds_mogipix/share/postgresql/17/extension/: mogipix--0.0.1.sql  mogipix.control
pg_regress/expected/: setup.out
pg_regress/sql/: setup.sql  tests.sql
src/: bmoc.rs  lib.rs  moc.rs  tests.rs
