[package]
name = "healpix_pgrx"
version = "0.0.1"
edition = "2021"
authors = ["Marjorie Lapointe <marjorie.lapointe@zaclys.net>"]
description = "A Postgres extension for HEALPix in Rust"
homepage = "https://gitlab.com/marjorielptt/healpix-pgrx"
repository = "https://gitlab.com/marjorielptt/healpix-pgrx"
keywords = ["postgres", "extension", "healpix", "pgrx", "rust", "cds"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_healpix_pgrx"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "=0.15.0"
cdshealpix = { version = "0.8.1", git = "https://github.com/cds-astro/cds-healpix-rust.git" }
moc = { git = "https://github.com/cds-astro/cds-moc-rust.git" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
pgrx-tests = "=0.15.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
