[package]
name = "mogipix"
version = "0.0.1"
edition = "2021"
authors = ["Marjorie Lapointe <marjorie.lapointe@zaclys.net>"]
description = "A PostgreSQL extension of the HEALPix and MOC librairies in Rust"
homepage = "https://gitlab.com/marjorielptt/healpix-pgrx"
repository = "https://gitlab.com/marjorielptt/healpix-pgrx"
keywords = ["postgresql", "extension", "pgrx", "rust", "cds", "healpix", "moc", "gist"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_mogipix"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "=0.15.0"
cdshealpix = { version = "0.8.1", git = "https://github.com/cds-astro/cds-healpix-rust" }
moc = { git = "https://github.com/cds-astro/cds-moc-rust" }
skyregion = { version = "0.1.0", features = ["rayon"], git = "https://github.com/cds-astro/cds-skyregion-rust" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pgrx-tests = "=0.15.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
